--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Junshen
+first_name: Sarang
 middle_name: 
-last_name: Xu
+last_name: Nath
 chinese_last_name: 徐
 chinese_first_name: 俊燊
-email: junshen@mit.edu
+email: nathsarang@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
