--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,29 +2,29 @@
   type: map
   contents:
     - name: Full Name
-      value: Junshen Xu
+      value: Sarang Sunil Nath
     #- name: Date of Birth
-    #  value: 14th March 1879
+    #  value: 28th September 1993
     - name: Email
-      value: junshen [at] mit [dot] edu
+      value: nathsarang [at] gmail [dot] com
     - name: Languages
-      value: English, Chinese
+      value: English, Hindi, Kannada, French
 
 - title: Education
   type: time_table
   contents:
-    - title: Ph.D. in Electrical Engineering and Computer Science
-      institution: Massachusetts Institute of Technology
-      year: 2018 - 2023
-    - title: S.M. in Electrical Engineering and Computer Science
-      institution: Massachusetts Institute of Technology
-      year: 2018 - 2020
+    - title: Ph.D. in Chemical Engineering
+      institution: Technical University of Denmark
+      year: 2019 - 2022
+    - title: M. S. in Chemical Engineering
+      institution: Stanford University
+      year: 2015 - 2018
       #description:
       #  - Description 1.
       #  - Description 2.
-    - title: B.E. in Engineering Physics
-      institution: Tsinghua University
-      year: 2014 - 2018
+    - title: B. Tech. in Chemical Engineering
+      institution: Indian Institute of Technology Delhi
+      year: 2011 - 2015
       #description:
       #  - Description 1.
       #  - Description 2.
