--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -31,47 +31,32 @@
       description:
         - First position in the graduating batch with a GPA of 9.849/10
         – Minor Area in Biological Sciences
+        
+- title: Academic Interests
+  type: nested_list
+  contents:
+    - title: Modelling of biochemical and biophysical networks
+    - title: Dynamics of mechanobiological systems
+    - title: Mechanism of molecular motors and ion channels
 
 - title: Experience
   type: time_table
   contents:
-    - title: Research Assistant
-      institution: Massachusetts Institute of Technology
-      year: 2018 - present
+    - title: Kinetic Modelling of Large-Scale Metabolic Networks
+      institution: DTU Biosustain
+      year: June 2019 - present
       description:
-        - 2D-to-3D reconstruction
-        - Image quality assessment
-        - 3D pose estimation pipeline for fetal MRI
-    - title: Machine Learning Engineer Intern
-      institution: Instagram Reels Core Ranking @ Meta
-      year: May - Aug 2022
-      description:
-        - Mitigated short video bias in Reels
-    - title: Software Engineer Intern
-      institution: Adwords Insights Team @ Google
-      year: Jun - Aug 2021
-      description:
-        - Improved keyword classification in search ads
-        - Developed algorithms to detect the cold start of bidding strategies
-    - title: Research Scientist Intern
-      institution: United Imaging Intellignece America
-      year: Jun - Aug 2020
-      description:
-        - Multi-modal image registration with neural ODE
-        - Differentiable Digitally Reconstructed Radiograph (DRR)
-    - title: Research Assistant
+        - Advised by Prof. Lars Nielsen, Prof. John Villadsen
+        - Developed new representations and analytical tools to study the kinetics of chemical reaction networks
+        – Applyied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics
+    - title: Molecular Mechanisms of Integrin Clustering
       institution: Stanford University
-      year: Jun - Aug 2017
+      year: July 2017 - January 2019
       description:
-        - Low dose PET reconstruction with deep learning
-
-# - title: Open Source Projects
-#   type: time_table
-#   contents:
-#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-#       year: 2015-now
-#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
+        - Advised by Prof. Alexander Dunn
+        - Executed molecular dynamics simulations to generate a phase space for integrin cluster formation
+        – Determined energetic and configurational barriers to association and interaction at the molecular scale
+    
 # - title: Honors and Awards
 #   type: time_table
 #   contents:
@@ -83,17 +68,7 @@
 #       items: 
 #         - Max Planck Medal
 
-# - title: Academic Interests
-#   type: nested_list
-#   contents:
-#     - title: Topic 1.
-#       items: 
-#         - Description 1.
-#         - Description 2.
-#     - title: Topic 2.
-#       items:
-#         - Description 1.
-#         - Description 2.
+
 
 # - title: Other Interests
 #   type: list
