--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -39,23 +39,23 @@
 #     - title: Dynamics of mechanobiological systems
 #     - title: Mechanism of molecular motors and ion channels
 
-- title: Experience
-  type: time_table
-  contents:
-    - title: Kinetic Modelling of Large-Scale Metabolic Networks
-      institution: DTU Biosustain
-      year: June 2019 - present
-      description:
-        - Advised by Prof. Lars Nielsen, Prof. John Villadsen
-        - Developed new representations and analytical tools to study the kinetics of chemical reaction networks
-        – Applyied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics
-    - title: Molecular Mechanisms of Integrin Clustering
-      institution: Stanford University
-      year: July 2017 - January 2019
-      description:
-        - Advised by Prof. Alexander Dunn
-        - Executed molecular dynamics simulations to generate a phase space for integrin cluster formation
-        – Determined energetic and configurational barriers to association and interaction at the molecular scale
+# - title: Experience
+#   type: time_table
+#   contents:
+#     - title: Kinetic Modelling of Large-Scale Metabolic Networks
+#       institution: DTU Biosustain
+#       year: June 2019 - present
+#       description:
+#         - Advised by Prof. Lars Nielsen, Prof. John Villadsen
+#         - Developed new representations and analytical tools to study the kinetics of chemical reaction networks
+#         – Applyied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics
+#     - title: Molecular Mechanisms of Integrin Clustering
+#       institution: Stanford University
+#       year: July 2017 - January 2019
+#       description:
+#         - Advised by Prof. Alexander Dunn
+#         - Executed molecular dynamics simulations to generate a phase space for integrin cluster formation
+#         – Determined energetic and configurational barriers to association and interaction at the molecular scale
     
 # - title: Honors and Awards
 #   type: time_table
