--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -19,18 +19,18 @@
       description:
           - Research at the Novo Nordisk Foundation Center for Biosustainability
           - Co-advised by Prof. Lars Nielsen and Prof. John Villadsen
-    - title: S.M. in Electrical Engineering and Computer Science
-      institution: Massachusetts Institute of Technology
-      year: 2018 - 2020
-      #description:
-      #  - Description 1.
-      #  - Description 2.
-    - title: B.E. in Engineering Physics
-      institution: Tsinghua University
-      year: 2014 - 2018
-      #description:
-      #  - Description 1.
-      #  - Description 2.
+    - title: M. S. in Chemical Engineering
+      institution: Stanford University
+      year: 2015 - 2018
+      description:
+          - Research work in group of Prof. Alexander Dunn
+          - Course GPA: 3.904/4
+    - title: B. Tech. in Chemical Engineering
+      institution: Indian Institute of Technology Delhi
+      year: 2011 - 2015
+      description:
+          - First position in the graduating batch with a GPA of 9.849/10
+          - Minor Area in Biological Sciences
 
 - title: Experience
   type: time_table
