--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -24,7 +24,7 @@
       year: 2015 - 2018
       description:
           - Research work in group of Prof. Alexander Dunn
-          - Course GPA: 3.904/4
+          - Course GPA = 3.904/4
     - title: B. Tech. in Chemical Engineering
       institution: Indian Institute of Technology Delhi
       year: 2011 - 2015
