--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -43,12 +43,17 @@
   type: time_table
   contents:
     - title: Kinetic Modelling of Large-Scale Metabolic Networks
-      institution: Massachusetts Institute of Technology
-      year: 2018 - present
+      institution: DTU Biosustain
+      year: June 2019 - present
       description:
-        - 2D-to-3D reconstruction
-        - Image quality assessment
-        - 3D pose estimation pipeline for fetal MRI
+        - Developing improved isotope labelling schemes to study the kinetics of chemical reaction networks
+        – Applying and improving Bayesian methods to solve whole-cell models and extract cellular dynamics
+    - title: Representing Reaction Networks as Electrical Circuits
+      institution: DTU Biosustain
+      year: June 2019 - present
+      description:
+        - Transforming chemical and biochemical reactive systems into equivalent modular electrical circuits
+        – Applying this approach on chaotic systems (Olsen attractor) and cyclic mechanisms (DHFR pathway)
 
 - title: Teaching
   type: time_table
