--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -43,11 +43,12 @@
   type: time_table
   contents:
     - title: Kinetic Modelling of Large-Scale Metabolic Networks
-      institution: DTU Biosustain
-      year: June 2019 - present
+      institution: Massachusetts Institute of Technology
+      year: 2018 - present
       description:
-        - Developing improved isotope labelling schemes to study the kinetics of chemical reaction networks
-        – Applying and improving Bayesian methods to solve whole-cell models and extract cellular dynamics
+        - 2D-to-3D reconstruction
+        - Image quality assessment
+        - 3D pose estimation pipeline for fetal MRI
 
 - title: Teaching
   type: time_table
