--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -49,6 +49,21 @@
           - Advised by Prof. Lars Nielsen and Prof. John Villadsen
           - Developing improved isotope labelling schemes to study the kinetics of chemical reaction networks
           - Applying and improving Bayesian methods to solve whole-cell models and extract cellular dynamics
+    - title: Kinetic Modelling of Large-Scale Metabolic Networks
+      institution: DTU Biosustain
+      year: June 2019 - present
+      description:
+          - Advised by Prof. Lars Nielsen and Prof. John Villadsen
+          - Developing improved isotope labelling schemes to study the kinetics of chemical reaction networks
+          - Applying and improving Bayesian methods to solve whole-cell models and extract cellular dynamics
+    - title: Kinetic Modelling of Large-Scale Metabolic Networks
+      institution: DTU Biosustain
+      year: June 2019 - present
+      description:
+          - Advised by Prof. Lars Nielsen and Prof. John Villadsen
+          - Developing improved isotope labelling schemes to study the kinetics of chemical reaction networks
+          - Applying and improving Bayesian methods to solve whole-cell models and extract cellular dynamics
+  
         
 - title: Teaching
   type: time_table
