--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -49,20 +49,20 @@
           - Advised by Prof. Lars Nielsen and Prof. John Villadsen
           - Developing improved isotope labelling schemes to study the kinetics of chemical reaction networks
           - Applying and improving Bayesian methods to solve whole-cell models and extract cellular dynamics
-    - title: Kinetic Modelling of Large-Scale Metabolic Networks
+    - title: Representing Reaction Networks as Electrical Circuits
       institution: DTU Biosustain
       year: June 2019 - present
       description:
           - Advised by Prof. Lars Nielsen and Prof. John Villadsen
-          - Developing improved isotope labelling schemes to study the kinetics of chemical reaction networks
-          - Applying and improving Bayesian methods to solve whole-cell models and extract cellular dynamics
-    - title: Kinetic Modelling of Large-Scale Metabolic Networks
-      institution: DTU Biosustain
-      year: June 2019 - present
+          - Transforming chemical and biochemical reactive systems into equivalent modular electrical circuits
+          – Applying this approach on chaotic systems (Olsen attractor) and cyclic mechanisms (DHFR pathway)
+    - title: Molecular Mechanisms of Integrin Clustering
+      institution: Stanford University
+      year: July 2017 - January 2019
       description:
-          - Advised by Prof. Lars Nielsen and Prof. John Villadsen
-          - Developing improved isotope labelling schemes to study the kinetics of chemical reaction networks
-          - Applying and improving Bayesian methods to solve whole-cell models and extract cellular dynamics
+          - Advised by Prof. Alexander Dunn
+          - Executed molecular dynamics simulations to generate a phase space for integrin cluster formation
+          – Determined energetic and configurational barriers to association and interaction at the molecular scale
   
         
 - title: Teaching
