--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -46,25 +46,24 @@
       institution: DTU Biosustain
       year: June 2019 - present
       description:
-          - Advised by Prof. Lars Nielsen and Prof. John Villadsen
-          - Developing improved isotope labelling schemes to study the kinetics of chemical reaction networks
-          - Applying and improving Bayesian methods to solve whole-cell models and extract cellular dynamics
+        - Advised by Prof. Lars Nielsen and Prof. John Villadsen
+        - Developed improved isotope labelling schemes to study the kinetics of chemical reaction networks
+        - Applied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics
     - title: Representing Reaction Networks as Electrical Circuits
       institution: DTU Biosustain
       year: June 2019 - present
       description:
-          - Advised by Prof. Lars Nielsen and Prof. John Villadsen
-          - Transforming chemical and biochemical reactive systems into equivalent modular electrical circuits
-          – Applying this approach on chaotic systems (Olsen attractor) and cyclic mechanisms (DHFR pathway)
+        - Advised by Prof. Lars Nielsen and Prof. John Villadsen
+        - Transformed chemical and biochemical reactive systems into equivalent modular electrical circuits
+        – Applied this approach on chaotic systems (Olsen attractor) and cyclic mechanisms (DHFR pathway)
     - title: Molecular Mechanisms of Integrin Clustering
       institution: Stanford University
       year: July 2017 - January 2019
       description:
-          - Advised by Prof. Alexander Dunn
-          - Executed molecular dynamics simulations to generate a phase space for integrin cluster formation
-          – Determined energetic and configurational barriers to association and interaction at the molecular scale
-  
-        
+        - Advised by Prof. Alexander Dunn
+        - Executed molecular dynamics simulations to generate a phase space for integrin cluster formation
+        – Determined energetic and configurational barriers to association and interaction at the molecular scale
+ 
 - title: Teaching
   type: time_table
   contents:
