--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -55,21 +55,21 @@
       description:
         - Advised by Prof. Lars Nielsen and Prof. John Villadsen
         - Transformed chemical and biochemical reactive systems into equivalent modular electrical circuits
-        - Applyied this approach to chaotic systems (Olsen attractor) and cyclic mechanisms (DHFR pathway)        
-#     - title: Representing Reaction Networks as Electrical Circuits
-#       institution: DTU Biosustain
-#       year: June 2019 - present
-#       description:
-#         - Advised by Prof. Lars Nielsen and Prof. John Villadsen
-#         - Transformed chemical and biochemical reactive systems into equivalent modular electrical circuits
-#         – Applied this approach on chaotic systems (Olsen attractor) and cyclic mechanisms (DHFR pathway)
-#     - title: Molecular Mechanisms of Integrin Clustering
-#       institution: Stanford University
-#       year: July 2017 - January 2019
-#       description:
-#         - Advised by Prof. Alexander Dunn
-#         - Executed molecular dynamics simulations to generate a phase space for integrin cluster formation
-#         – Determined energetic and configurational barriers to association and interaction at the molecular scale
+        - Applied this approach to chaotic systems (Olsen attractor) and cyclic mechanisms (DHFR pathway)
+    - title: Molecular Mechanisms of Integrin Clustering
+      institution: Stanford University
+      year: July 2017 - January 2019
+      description:
+        - Advised by Prof. Alexander Dunn
+        - Executed molecular dynamics simulations to generate a phase space for integrin cluster formation
+        - Determined energetic and configurational barriers to association and interaction at the molecular scale        
+    - title: bb
+      institution: cc 
+      year: aa
+      description:
+        - yy
+        - xx
+        – zz
  
 - title: Teaching
   type: time_table
