--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -56,13 +56,13 @@
         - Advised by Prof. Lars Nielsen and Prof. John Villadsen
         - Transformed chemical and biochemical reactive systems into equivalent modular electrical circuits
         - Applied this approach to chaotic systems (Olsen attractor) and cyclic mechanisms (DHFR pathway)
-    - title: bb
-      institution: cc 
-      year: aa
+    - title: Molecular Mechanisms of Integrin Clustering
+      institution: Stanford University
+      year: July 2017 - January 2019
       description:
-        - yy
-        - xx
-        – zz
+        - Advised by Prof. Alexander Dunn
+        - Executed molecular dynamics simulations to generate a phase space for integrin cluster formation
+        – Determined energetic and configurational barriers to association and interaction at the molecular scale
 #     - title: Molecular Mechanisms of Integrin Clustering
 #       institution: Stanford University
 #       year: July 2017 - January 2019
