--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -49,6 +49,27 @@
         - Advised by Prof. Lars Nielsen and Prof. John Villadsen
         - Developed improved isotope labelling schemes to study the kinetics of chemical reaction networks
         - Applied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics
+    - title: Kinetic Modelling of Large-Scale Metabolic Networks
+      institution: DTU Biosustain
+      year: June 2019 - present
+      description:
+        - Advised by Prof. Lars Nielsen and Prof. John Villadsen
+        - Developed improved isotope labelling schemes to study the kinetics of chemical reaction networks
+        - Applied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics
+    - title: Kinetic Modelling of Large-Scale Metabolic Networks
+      institution: DTU Biosustain
+      year: June 2019 - present
+      description:
+        - Advised by Prof. Lars Nielsen and Prof. John Villadsen
+        - Developed improved isotope labelling schemes to study the kinetics of chemical reaction networks
+        - Applied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics
+    - title: Kinetic Modelling of Large-Scale Metabolic Networks
+      institution: DTU Biosustain
+      year: June 2019 - present
+      description:
+        - Advised by Prof. Lars Nielsen and Prof. John Villadsen
+        - Developed improved isotope labelling schemes to study the kinetics of chemical reaction networks
+        - Applied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics        
 #     - title: Representing Reaction Networks as Electrical Circuits
 #       institution: DTU Biosustain
 #       year: June 2019 - present
