--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -44,32 +44,32 @@
   contents:
     - title: Kinetic Modelling of Large-Scale Metabolic Networks
       institution: DTU Biosustain
-      year: June 2019 - present
+      year: Jun 2019 - present
       description:
         - Advised by Prof. Lars Nielsen and Prof. John Villadsen
         - Developed improved isotope labelling schemes to study the kinetics of chemical reaction networks
         - Applied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics
     - title: Representing Reaction Networks as Electrical Circuits
       institution: DTU Biosustain
-      year: June 2019 - present
+      year: Jun 2019 - present
       description:
         - Advised by Prof. Lars Nielsen and Prof. John Villadsen
         - Transformed chemical and biochemical reactive systems into equivalent modular electrical circuits
         - Applied this approach to chaotic systems (Olsen attractor) and cyclic mechanisms (DHFR pathway)
     - title: Molecular Mechanisms of Integrin Clustering
       institution: Stanford University
-      year: July 2017 - January 2019
+      year: Jul 2017 - Jan 2019
       description:
         - Advised by Prof. Alexander Dunn
         - Executed molecular dynamics simulations to generate a phase space for integrin cluster formation
         - Determined energetic and configurational barriers to association and interaction at the molecular scale
-    - title: Kinetic Modelling of Large-Scale Metabolic Networks
-      institution: DTU Biosustain
-      year: June 2019 - present
+    - title: Tension Sensor Calibration and Adhesion Experiments
+      institution: Stanford University
+      year: Jan 2016 - Jul 2017
       description:
-        - Advised by Prof. Lars Nielsen and Prof. John Villadsen
-        - Developed improved isotope labelling schemes to study the kinetics of chemical reaction networks
-        - Applied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics
+        - Advised by Prof. Alexander Dunn
+        - Calibrated molecular tension sensors in a magnetic trap to relate force, FRET output, and extension
+        - Employed the sensors to image force distribution within focal adhesions in human foreskin fibroblasts
     - title: Kinetic Modelling of Large-Scale Metabolic Networks
       institution: DTU Biosustain
       year: June 2019 - present
@@ -84,10 +84,10 @@
   contents:
     - title: TA in Chemical Kinetics and Reaction Engineering
       institution: Stanford University
-      year: March - June 2018
+      year: Mar - Jun 2018
     - title: TA in Chemical Kinetics and Reaction Engineering
       institution: Stanford University
-      year: March - June 2017
+      year: Mar - Jun 2017
 
 # - title: Honors and Awards
 #   type: time_table
