--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -70,13 +70,13 @@
         - Advised by Prof. Alexander Dunn
         - Calibrated molecular tension sensors in a magnetic trap to relate force, FRET output, and extension
         - Employed the sensors to image force distribution within focal adhesions in human foreskin fibroblasts
-    - title: Kinetic Modelling of Large-Scale Metabolic Networks
-      institution: DTU Biosustain
-      year: June 2019 - present
+    - title: Alignment of Rings in Shear Flow
+      institution: Indian Institute of Technology Delhi
+      year: Jul 2014 - Sep 2015
       description:
-        - Advised by Prof. Lars Nielsen and Prof. John Villadsen
-        - Developed improved isotope labelling schemes to study the kinetics of chemical reaction networks
-        - Applied and improved Bayesian methods to solve whole-cell models and extract cellular dynamics        
+        - Advised by Prof. Shantanu Roy and Prof. Vikram Singh
+        - Designed and fabricated an experimental setup to visualize alignment of ring-like bodies in shear flow
+        - Analyzed the effect of modifying body shape by boundary element method simulations in MATLAB        
         
  
 - title: Teaching
