--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -76,8 +76,21 @@
       description:
         - Advised by Prof. Shantanu Roy and Prof. Vikram Singh
         - Designed and fabricated an experimental setup to visualize alignment of ring-like bodies in shear flow
-        - Analyzed the effect of modifying body shape by boundary element method simulations in MATLAB        
-        
+        - Analyzed the effect of modifying body shape by boundary element method simulations in MATLAB
+    - title: Genome Scale Metabolic Modeling
+      institution: University of Wisconsin-Madison
+      year: May - Jul 2013
+      description:
+        - Advised by Prof. Parmesh Ramanathan and Prof. Aseem Ansari
+        - Automated metabolic model reconstruction to engineer biological systems for desirable functionalities
+        - Explored feasibility of biosynthesis of secondary metabolites through in silico optimization routines
+    - title: RNA Imaging using Spinach-DFHBI
+      institution: Ecole Normale Superieure Paris ´
+      year: May - Jul 2012
+      description:
+        - Advised by Prof. Ludovic Jullien
+        - Formulated a mechanistic and kinetic model of photoswitchable Spinach-DFHBI RNA imaging system
+        - Published results in Chemical Science and patented novel proof of concept for fluorescence detection
  
 - title: Teaching
   type: time_table
