--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -116,4 +116,4 @@
 - title: Other Interests
   type: list
   contents:
-    - Tennis, Board games, Tabla
+    - Reading, Tennis, Board games, Tabla
