--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -85,7 +85,7 @@
         - Automated metabolic model reconstruction to engineer biological systems for desirable functionalities
         - Explored feasibility of biosynthesis of secondary metabolites through in silico optimization routines
     - title: RNA Imaging using Spinach-DFHBI
-      institution: Ecole Normale Superieure Paris ´
+      institution: Ecole Normale Superieure Paris
       year: May - Jul 2012
       description:
         - Advised by Prof. Ludovic Jullien
